<resources>
    <string name="app_name">LINE SDK Sample Application</string>
    <string name="menu_settings_save_slot_title">Settings save slot</string>
    <string name="menu_settings_save_slot_1">1</string>
    <string name="menu_settings_save_slot_2">2</string>
    <string name="menu_settings_save_slot_3">3</string>
    <string name="menu_item_sign_in">Sign-In</string>
    <string name="menu_item_apis">APIs</string>
    <string name="menu_item_internal_apis">Internal APIs</string>
    <string name="menu_save_settings">Save</string>
    <string name="signin_scopes">Scopes</string>
    <string name="signin_scope_all">ALL</string>
    <string name="signin_scope_friend">FRIEND</string>
    <string name="signin_scope_profile">PROFILE</string>
    <string name="signin_scope_timeline">TIMELINE</string>
    <string name="signin_scope_group">GROUP</string>
    <string name="signin_scope_profile_image_update">PROFILE_IMAGE_UPDATE</string>
    <string name="signin_scope_message">MESSAGE</string>
    <string name="signin_scope_openid_connect">OPENID_CONNECT</string>
    <string name="signin_scope_oc_email">OC_EMAIL</string>
    <string name="signin_scope_oc_phone_number">OC_PHONE_NUMBER</string>
    <string name="signin_scope_oc_gender">OC_GENDER</string>
    <string name="signin_scope_oc_birthdate">OC_BIRTHDATE</string>
    <string name="signin_scope_oc_address">OC_ADDRESS</string>
    <string name="signin_scope_oc_real_name">OC_REAL_NAME</string>
    <string name="signin_line_app_auth_checkbox">use LINE app auth</string>
    <string name="signin_nonce_title">nonce</string>
    <string name="signin_bot_prompt_title">Bot Prompt</string>
    <string name="signin_bot_prompt_none">None</string>
    <string name="signin_bot_prompt_normal">Normal</string>
    <string name="signin_bot_prompt_aggressive">Aggressive</string>
    <string name="apis_logout">logout</string>
    <string name="apis_refresh_token">refreshToken</string>
    <string name="apis_verify_token">verifyToken</string>
    <string name="apis_get_current_token">getCurrentToken</string>
    <string name="apis_get_profile">getProfile</string>
    <string name="apis_get_friendship_status">getFriendshipStatus</string>
    <string name="apis_get_friends">getFriends</string>
    <string name="apis_get_groups">getGroups</string>
    <string name="apis_get_friends_approvers">getFriendsApprovers</string>
    <string name="apis_get_groups_approvers">getGroupsApprovers</string>
    <string name="apis_send_message">send all Messages</string>
    <string name="apis_send_message_dialog">send message dialog</string>
    <string name="apis_send_template_message">send all Template Messages</string>
    <string name="apis_section_title_internal_apis">Internal APIs > </string>
    <string name="apis_section_title_flex_message_apis">Flex Message APIs > </string>
    <string name="apis_section_title_graph_message_apis">Graph/Message APIs > </string>
    <string name="apis_revoke_access_token">revokeAccessToken</string>
    <string name="channel_id">Channel ID</string>
    <string name="sign_in">Sign-In</string>
    <string name="clear">Clear</string>
    <string name="clear_log">Clear Log</string>
    <string name="clear_receivers">Clear Friends/Groups</string>
    <string name="generate">Generate</string>
    <string name="uiLocale">UI Locale</string>
    <string name="apis_section_title_openchat_apis">Openchat APIs > </string>
    <string name="apis_openchat_agreement_update">update openChat agreement status</string>
    <string name="apis_openchat_create_room">create chatroom</string>
    <string name="apis_openchat_membership_status">membership status</string>
    <string name="apis_openchat_join_chatroom">join openchat room</string>
    <string name="apis_openchat_chatroom_status">get chatroom status</string>
    <string name="apis_openchat_chatroom_join_type">get chatroom join type</string>
    <string name="apis_openchat_create_room_with_ui">create chatroom with UI</string>
    <string name="apis_openchat_agreement_get_status">get openchat agreement status</string>
    <string-array name="supportedLocales">
        <item>ar</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>es_ES</item>
        <item>fr</item>
        <item>in</item>
        <item>it</item>
        <item>ja</item>
        <item>ko</item>
        <item>ms</item>
        <item>pt_BR</item>
        <item>pt_PT</item>
        <item>ru</item>
        <item>th</item>
        <item>tr</item>
        <item>vi</item>
        <item>zh_TW</item>
        <item>zh_CN</item>
    </string-array>
</resources>
