<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/signin_bot_prompt_title" android:id="@+id/textView" />
    <RadioGroup
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
        <RadioButton
          android:text="@string/signin_bot_prompt_none"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/signin_bot_prompt_none_radio"
          android:layout_weight="1"
          android:checked="true" />
        <RadioButton
          android:text="@string/signin_bot_prompt_normal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/signin_bot_prompt_normal_radio"
          android:layout_weight="1"
          android:checked="false" />
        <RadioButton
          android:text="@string/signin_bot_prompt_aggressive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:id="@+id/signin_bot_prompt_aggressive_radio"
          android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_scopes" />
        <CheckBox
            android:id="@+id/scope_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_scope_all"/>

    </LinearLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="320px">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" android:id="@+id/scope_checkbox_layout" />
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <CheckBox
            android:id="@+id/sign_in_line_app_auth_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/signin_line_app_auth_checkbox" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/clear" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>
