<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/apis_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/logout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apis_logout"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/refresh_token_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apis_refresh_token"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/verify_token_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apis_verify_token"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/get_current_token_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apis_get_current_token"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/get_profile_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apis_get_profile"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/get_friendship_status_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apis_get_friendship_status"
                    android:textAllCaps="false" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/clear_log_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/clear" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

            <TextView
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />
        </ScrollView>
    </LinearLayout>
</ScrollView>