<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/apis_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apis_section_title_graph_message_apis" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/get_friends_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apis_get_friends"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/get_friends_approvers_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apis_get_friends_approvers"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/get_groups_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apis_get_groups"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/get_groups_approvers_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apis_get_groups_approvers"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/send_all_message_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apis_send_message"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/send_all_template_message_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apis_send_template_message"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/send_text_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send text message" />

            <Button
                android:id="@+id/send_image_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send image message" />

            <Button
                android:id="@+id/send_video_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send video message" />

            <Button
                android:id="@+id/send_audio_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send audio message" />

            <Button
                android:id="@+id/send_location_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send location message" />

            <Button
                android:id="@+id/send_buttons_template_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send Buttons template message" />

            <Button
                android:id="@+id/send_confirm_template_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send Confirm template message" />

            <Button
                android:id="@+id/send_carousel_template_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send Carousel template message" />

            <Button
                android:id="@+id/send_carousel_image_template_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send Carousel with image message" />


            <Button
                android:id="@+id/send_image_carousel_template_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send ImageCarousel template message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apis_section_title_flex_message_apis" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/send_flex_hello_world_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send Flex Hello World message" />

            <Button
                android:id="@+id/send_flex_bubble_container_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send Flex Bubble Container message" />

            <Button
                android:id="@+id/send_flex_carousel_container_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send Flex Carousel Container message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apis_section_title_internal_apis" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/revoke_access_token_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apis_revoke_access_token"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
        <Button
          android:id="@+id/clear_log_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:text="@string/clear_log" />

        <Button
          android:id="@+id/clear_receivers_btn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:text="@string/clear_receivers" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9">

        <TextView
            android:id="@+id/log"
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>
